# OOP_4.2

./: README.md  pyproject.toml
doc/: lr3.docx  ~$lr2.docx  ~$lr3.docx
src/: task1.py  task2.py
src/tests/: first_task_tests.py  second_task_tests.py
